fix styling and elements alignment

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -116,7 +116,7 @@
   }
   body {
     @apply bg-background text-foreground;
-    font-family: 'Anton';
+    font-family: 'Oswald';
 
   }
 }
